[workspace]
resolver = "2"
members = ["crates/*"]

[package]
name = "big_space"
version = "0.1.3"
edition = "2021"
description = "A floating origin plugin for bevy"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.9", default_features = false }
bevy_polyline = { version = "0.4", optional = true }

[dev-dependencies]
bevy = { version = "0.9", default_features = false, features = [
    "bevy_render",
    "bevy_winit",
    "x11",
] }
bevy_framepace = "0.11"

[patch.crates-io]
# bevy = { path = "../bevy" }

[features]
default = ["debug"]
debug = ["bevy_polyline"]
