[package]
name = "big_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default_features = false }
rapier3d = { version = "*", features = [
    "simd-stable",
    "parallel",
    "serde-serialize",
] }
