[package]
name = "big_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
